--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ nav{
     width: 18vw;
     justify-content: space-between;
     align-items: center;
+    font-family: "futura";
 }
 #nav2-in2{
     display: flex;
