--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ nav{
 }
 #page1 h1{
     font-family: 'futura';
-    font-size: 16vw;
+    font-size: 250px;
     letter-spacing: -10px;
     font-weight: bold;
     line-height: 0.85;
