--- a/style.css
+++ b/style.css
@@ -143,8 +143,8 @@ nav{
 }
 #page1 h1{
     font-family: 'futura';
-    font-size: 250px;
-    letter-spacing: -10px;
+    font-size: 15.5vw;
+    letter-spacing: -0.8vw;
     font-weight: bold;
     line-height: 0.85;
 }
